adding start.sh file so forever can reboot o nserver in case of reboot added link to resume and added resume.pdf

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
           Currently Available for Projects
         </p>
         <p class="lead small col-md-3 col-sm-12">
-          <a href="#">View</a>&nbsp;/&nbsp;<a href="#" download="download">Download</a> my CV
+          <a href="/images/resume.pdf">View</a>&nbsp;/&nbsp;<a href="/images/resume.pdf" download="download">Download</a> my CV
         </p>
       </div>
     </div>
